# polars_speed_test

./: duration_pl_v1.16.0.pkl  duration_pl_v1.17.1.pkl  duration_pl_v1.18.0.pkl  evaluate.ipynb  lazy_duration_pl_v1.16.0.pkl  lazy_duration_pl_v1.17.1.pkl  lazy_duration_pl_v1.18.0.pkl  measure_filter_process.ipynb  pyproject.toml
