[tool.poetry]
name = "polars-speed-test"
version = "0.1.0"
description = ""
authors = ["yashikab <yashikaba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
ipykernel = "^6.29.5"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
polars = "1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
